infra/k8s/rests/webapp-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
        - name: webapp
          image: fans3210/webapp
---
apiVersion: v1
kind: Service
metadata:
  name: webapp-srv
spec:
  type: LoadBalancer
  selector:
    app: webapp
  ports:
    - name: webapp
      protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30000
